home-assistant/deployment-home.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: home-assistant
          image: $REPLACE #HA Container Image of Choice
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
          securityContext:
            privileged: true
          volumeMounts:
            - name: config
              mountPath: /config
            - name: run
              mountPath: /run
            - name: tmp
              mountPath: /tmp
            - name: usb
              mountPath: /dev/serial/by-id
          livenessProbe:
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 30
            periodSeconds: 15
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: usb
          hostPath:
            path: /dev/serial/by-id
            type: Directory
        - name: run
          emptyDir: {}
        - name: tmp
          emptyDir: {}
