home-assistant/service-home.yml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - port: 8123
      targetPort: 8123
